# robotica_cese_env

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  entrypoint.sh
src/: mycobot.repos
src/clase3/: CMakeLists.txt  README.txt  package.xml
src/clase3/config/: display.rviz  ros2_controllers.yaml
src/clase3/launch/: display.launch.py  dp_sim.launch.OK.py  dp_sim.launch.py  gazebo.launch.py
src/clase3/scripts/: enviar_referencia.py
src/clase3/urdf/: double_pendulum.urdf  double_pendulum.xacro
src/clase3/worlds/: double_pendulum.world
src/clase4/: CMakeLists.txt  package.xml
src/clase4/config/: r2b_arm.rviz  view_nodes.perspective
src/clase4/launch/: multisim.launch.py  node_analysis.launch.py
src/clase5/: README.md  package.xml  setup.cfg  setup.py
src/clase5/clase5/: __init__.py  counter_publisher.py  counter_subscriber.py
src/clase5/launch/: counter_demo.launch.py
src/clase5/resource/: clase5
src/clase6/: package.xml  setup.cfg  setup.py
src/ramirez_vazquez_pkg/: CMakeLists.txt  README.md  package.xml
src/ramirez_vazquez_pkg/config/: rosbag.perspective  rosbag.rviz
src/ramirez_vazquez_pkg/launch/: play.py
src/vazquez_ejer1_pkg/: package.xml  setup.cfg  setup.py
src/vazquez_ejer1_pkg/launch/: counter_demo.launch.py
src/vazquez_ejer1_pkg/vazquez_ejer1_pkg/: counter_publisher.py  counter_subscriber.py
src/vazquez_ejer2_interfaces/: CMakeLists.txt  package.xml
src/vazquez_ejer2_interfaces/action/: RepublishText.action
src/vazquez_ejer2_pkg/: package.xml  setup.cfg  setup.py
(+3 files in other folders)
